[package]
name = "mycelium-std-core"
version.workspace = true
description = "std.core — Ring-0 prelude: the honest value model re-exported (M-515)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# Expose the `error_scaffold` test helpers (`assert_is_std_error`, `assert_display_contains`)
# to *other* crates' test suites. Off by default — the helpers are `#[cfg(test)]`-equivalent
# and add no surface to a normal build. A downstream crate enables this only under
# `[dev-dependencies]` (M-535, E5-1; DN-17 §4 P3).
test-support = []

[dependencies]
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-std-core"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
